-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
2
-
0bf2fafd3 (dev)
-
Foundation Sprint 129
Currently configure and compilation errors with -no-feature-clipboard
- clones
-
QTBUG-135874 Allow configuring wasm without draganddrop feature
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135875 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 641072,5 | Allow configuring WASM without clipboard | 6.9 | qt/qtbase | Status: NEW | 0 | +1 |
| 638761,5 | Allow configuring WASM without clipboard | dev | qt/qtbase | Status: MERGED | +2 | 0 |